--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+.total{
+  height: 20vh;
+  width: 100vw;
+  background-color: orange;
+  font-size: 6rem;
+  text-align: right;
+}
+.numpad{
+  display:grid;
+  grid-template-columns: auto auto auto auto;
+}
+.btns{
+  height:15vh;
+  width: 25vw;
+  font-size: 2rem;
+  background-color: rgb(204, 200, 200);
+  border: 1px black solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
